grammar.js
        source_file: $ => repeat($._top_level_statement),

        _top_level_statement: $ => choice(
            $.namespace,
            $.struct_definition,
            $.union_definition,
            $.bitfield_definition,
            $.enum_definition,
            $.variable_placement,
            $._statement,
            $._preproc_directive,
            $.using_definition,
            $.function_definition,
        ),

        struct_definition: $ => seq(
            'struct',
            field('name', $._identifier),
            field('body',$.field_list),
            $._declaration_finish
        ),

        union_definition: $ => seq(
            'union',
            field('name', $._identifier),
            field('body',$.field_list),
            $._declaration_finish
        ),

        variable_definition: $ => seq(
            field('type', $._type),
            $._identifier_definition,
            optional($._array_size_wrapper),
            optional(seq('=', field('value', $._expression))),
            $._declaration_finish
        ),

        variable_placement: $ => seq(
            choice(
                seq(
                    field('type', $._type),
                    $._identifier_definition,// TODO, maybe only one identifier?
                    optional($._array_size_wrapper),
                ),
                field('type', $.pointer_type)
            ),
            '@',
            field('offset', $._offset),
            $._declaration_finish
        ),

        _offset: $ => choice(
            $._expression,
            // $.number_literal, //?
            // $._identifier,
        ),

        _assignation_expression: $ => seq(
            field('left', $._identifier),
            field('operator', choice('=', '+=', '-=')),
            field('right', $._expression),
        ),

        assignation_statement: $ => seq(
            $._assignation_expression,
            ';'
        ),

        _array_size_wrapper: $ => seq(
            '[',
            optional(field('size', $._array_size)),
            ']',
        ),

        _identifier_definition: $ => seq(
            repeat(seq(field('name', $._identifier), ',')),
            field('name', $._identifier),
        ),

        field_list: $ => seq(
            '{',
            repeat(choice($._statement, $.padding)),
            '}',
        ),

        _declaration_finish: $ => seq(
            optional(field('attribute',$.attribute)), // TODO: Multiple attributes?
            ';'
        ),

        pointer_type: $ => seq( // Can only be placed inside structs, unions and variable_placement?
            field('type', $._type),
            '*',
            field('name', $.identifier),
            ':',
            field('pointer_type', $.primitive_type)
        ),

        _type: $ => choice(
            $._primitive_type,
            $._type_identifier,
            $.namespaced_type_identifier
        ),

        endian_indicator: $ => choice(
            'be',
            'le'
        ),

        primitive_type: $ => choice (
            'u8','u16','u32','u64','u128',
            's8','s16','s32','s64','s128',
            'float', 'double',
            'char', 'char16', 'bool', 'str', 'auto'
        ),

        _statement: $ => choice (
            $._definition_statement,
            $.if_statement,
            $.while_statement,
            $.for_statement,
            $._function_call_statement,
            $.return_statement,
            $.break_statement,
            $.continue_statement,
            $._pointer_statement, // only in structs and unions
        ),

        _expression: $ => choice(
            $._identifier,
            $._number,
            $._operator,
            $.string_literal,
            $.character_literal,
            $.boolean_literal,
            $.field_expression,
            $._function_call,
            $.type_operator,
            $.casting_operator,
            $.loop_size, // TODO: Maybe not
        ),

        _identifier: $ => choice(
            $.identifier,
            $.namespaced_identifier,
            $.dollar,
        ),

        identifier: $ => /[a-zA-Z_]\w*/,

        dollar: $=> '$',

        this: $=> 'this',

        parent: $=> 'parent',

        _field_identifier: $ => alias($.identifier, $.field_identifier),

        field_expression: $=> prec.left(1,seq(
            field('parent', choice($.identifier, $.parent, $.this)),
            repeat1(seq(
                '.',
                field('field', $._field_identifier),
                optional(field('size', $._array_size_wrapper)),

            )),
        )),

        number_literal: $ => token(choice(
            /-?\d+/, //int
            /\d+U/, //int
            /-?0x[0-9a-fA-F]+/, // Hex
            /-?0b[01]+/, // Binary
            /-?0o[0-7]+/, // Octal
            /-?\d+(.\d+)?[DF]?/ // Float/Double
        )),

        binary_numeric_operator: $ => {
            const table = [
            ['+', PREC.ADD],
            ['-', PREC.ADD],
            ['*', PREC.MULT],
            ['/', PREC.MULT],
            ['%', PREC.MULT],
            ['>>', PREC.SHIFT],
            ['<<', PREC.SHIFT],
            ['&', PREC.BITWISE_AND],
            ['|', PREC.BITWISE_OR],
            ['^', PREC.BITWISE_XOR],
            ['==', PREC.EQ],
            ['!=', PREC.EQ],
            ['>', PREC.EQ],
            ['<', PREC.EQ],
            ['>=', PREC.EQ],
            ['<=', PREC.EQ],
            ['&&', PREC.AND],
            ['||', PREC.OR],
            ['^^', PREC.XOR]
            ];
            // ...
            return choice(...table.map(([operator, precedence]) => {
                return prec.left(precedence, seq(
                    field('left', $._expression),
                    field('operator', operator),
                    field('right', $._expression)
                ))
            }));
        },
