test/corpus/struct.txt
==================
Simple struct definition
==================

struct mystruct {
u32 ident;
};

---
(source_file
  (struct_definition
    name: (identifier)
    body: (field_list
      (variable_definition
        type: (primitive_type)
        name: (identifier)))
  )
)

==================
Multi field struct definition
==================

struct mystruct {
u32 ident;
auto ident2;
};

---
(source_file
  (struct_definition
    name: (identifier)
    body: (field_list
      (variable_definition
        type: (primitive_type)
        name: (identifier))
      (variable_definition
        type: (primitive_type)
        name: (identifier)))))

==================
Multi identifier struct definition
==================

struct mystruct {
u32 ident, ident2;
};

---
(source_file
  (struct_definition
    name: (identifier)
    body: (field_list
      (variable_definition
        type: (primitive_type)
        name: (identifier)
        name: (identifier))))
)

==================
With endian indicator
==================

struct mystruct {
le u32 ident, ident2;
};

---
(source_file
  (struct_definition
    name: (identifier)
    body: (field_list
      (variable_definition
        endian: (endian_indicator)
        type: (primitive_type)
        name: (identifier)
        name: (identifier))))
)

==================
With dollar sign
==================

struct mystruct {
    u8 ident;
    $ = $ + 15;
    u32 ident;
};

---
(source_file
  (struct_definition
    name: (identifier)
    body: (field_list
      (variable_definition
        type: (primitive_type)
        name: (identifier))
      (assignation_statement
        left: (dollar)
        right: (binary_numeric_operator
          left: (dollar)
          right: (number_literal)))
      (variable_definition
        type: (primitive_type)
        name: (identifier))
    )
  )
)

==================
Parent access
==================

struct mystruct {
    $ = parent.offset;
};

---
(source_file
  (struct_definition
    name: (identifier)
    body: (field_list
      (assignation_statement
        left: (dollar)
        right: (field_expression
          parent: (parent)
          field: (field_identifier))))
  )
)

==================
Chaining parent access
==================

struct mystruct {
    $ = parent.var1.offset;
};

---
(source_file
  (struct_definition
    name: (identifier)
    body: (field_list
      (assignation_statement
        left: (dollar)
        right: (field_expression
          parent: (parent)
          field: (field_identifier)
          field: (field_identifier))))
  )
)

==================
This
==================
struct mystruct {
    u8 offset;
    $ += this.offset;
    u8 val;
};

---
(source_file
  (struct_definition
    name: (identifier)
    body: (field_list
      (variable_definition
        type: (primitive_type)
        name: (identifier))
      (assignation_statement
        left: (dollar)
        right: (field_expression
          parent: (this)
          field: (field_identifier)))
      (variable_definition
        type: (primitive_type)
        name: (identifier)))
  )
)

==================
With pointer
==================
struct mystruct {
    u8 *offset: u16;
    CustomType *x: u16;
};

---
(source_file
  (struct_definition
    name: (identifier)
    body: (field_list
      (pointer_type
        type: (primitive_type)
        name: (identifier)
        pointer_type: (primitive_type))
      (pointer_type
        type: (type_identifier)
        name: (identifier)
        pointer_type: (primitive_type))
    )
  )
)
